fix gramatical errors

--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
                 <!-- <i class="fas fa-shapes fa-3x p-3 mr-4"></i> -->
                 <div class="media-body">
                   <p>
-                    We are stage rationalist, our development team are specialists in web and software development practices, we provide a full stack service, which allows focus on the client or customer needs and let the innovation take place naturally throughout the course of the software development life cycle.
+                    We are stage rationalist, our development team are specialists in web and software development practices, we provide a full-stack service, which allows focus on the client or customer needs and let the innovation take place naturally throughout the course of the software development life cycle.
                   </p>
                 </div>
               </div>
