--- a/index.html
+++ b/index.html
@@ -75,12 +75,7 @@
             <section class="tm-content">
               <h2 class="mb-5 tm-content-title">What We Do</h2>
               <p class="mb-5">
-                We provide Web Development services and developers as a service
-                to businesses on a remote or in house basis. We aspire to
-                provide the next generation of programmers from diverse
-                backgrounds with the tools progress into the software
-                developement Industry.
-               
+                We provide web development services and developers as a service to businesses on a remote or in-house basis. We aspire to provide the next generation of programmers from diverse backgrounds with the tools to progress into the software development industry.
                 <br />
                 <br />
                 <!-- We believe that people are at the core of everything that we do and that
